Time: 5 ms (38.68%) | Memory: 45.3 MB (27.18%) - LeetSync